--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <section id="cover">
-            <video muted loop autoplay="autoplay">
+            <video muted loop autoplay="autoplay" playsinline>
                 <source src="video/cover.mp4" type="video/mp4">
             </video>
             <div class="capa"></div>
