--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;1,500&display=swap"
+        rel="stylesheet">
     <title>Portfolio - AES</title>
 </head>
 
@@ -41,7 +42,7 @@
     </header>
     <main>
         <section id="cover">
-            <video muted loop autoplay="autoplay" playsinline>
+            <video muted loop autoplay="autoplay">
                 <source src="video/cover.mp4" type="video/mp4">
             </video>
             <div class="capa"></div>
@@ -52,6 +53,15 @@
             <div class="cover-arrow">
                 <a href="" class="arrow"><img src="img/arrow-white.png" alt="" class="arrow"></a>
             </div>
+        </section>
+        <section id="me">
+            <p>Hello, I'm <strong class="p-italic-bold">Agustín</strong>, a <strong class="p-italic-bold">21-year-old</strong> web
+                developer
+                specialized in static websites. With a year of study and a current focus on <u
+                    class="p-italic-bold">JavaScript</u>,
+                I bring simplicity and efficiency to my projects. Below you can explore my portfolio to see my
+                dedication and growth in this field.
+            </p>
         </section>
     </main>
     <footer></footer>
