Añadiendo sección Formation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <hr>
         <nav>
             <div class="menu-item">
-                <a href="">
+                <a href="#me">
                     <img src="img/me-icon.png" alt="Me" class="menu-icon">
                 </a>
             </div>
@@ -51,17 +51,31 @@
                 <p class="tittle-description">Trainee programmer</p>
             </div>
             <div class="cover-arrow">
-                <a href="" class="arrow"><img src="img/arrow-white.png" alt="" class="arrow"></a>
+                <a href="#me" class="arrow"><img src="img/arrow-white.png" alt="" class="arrow"></a>
             </div>
         </section>
         <section id="me">
-            <p>Hello, I'm <strong class="p-italic-bold">Agustín</strong>, a <strong class="p-italic-bold">21-year-old</strong> web
+            <img src="img/foto-cv.jpg" alt="">
+            <p>Hello, I'm <strong class="p-italic-bold">Agustín</strong>, a <strong
+                    class="p-italic-bold">21-year-old</strong> web
                 developer
                 specialized in static websites. With a year of study and a current focus on <u
-                    class="p-italic-bold">JavaScript</u>,
-                I bring simplicity and efficiency to my projects. Below you can explore my portfolio to see my
+                    class="p-italic-bold">JavaScript</u>, I bring simplicity and efficiency to my projects. Below you can explore my portfolio to see my
                 dedication and growth in this field.
             </p>
+            <button class="download-cv-button"><a href="">Download CV</a></button>
+        </section>
+        <section id="formation">
+            <p>Formation:</p>
+            <ul>
+                <li>Secondary education: technical degree specialized in construction (2016 - 2021)</li>
+                <li>University: Degree in marketing (2023 - Present)</li>
+            </ul>
+            <p>Courses:</p>
+            <ul>
+                <li>Web Developement with HTML and CSS (2023 - 2024)</li>
+                <li>JavaScript (2024)</li>
+            </ul>
         </section>
     </main>
     <footer></footer>
