Terminando seccion projects

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 </a>
             </div>
             <div class="menu-item">
-                <a href="">
+                <a href="#formation">
                     <img src="img/formation-icon.png" alt="Formation" class="menu-icon">
                 </a>
             </div>
             <div class="menu-item">
-                <a href="">
+                <a href="#projects">
                     <img src="img/projects-icon.png" alt="Projects" class="menu-icon">
                 </a>
             </div>
             <div class="menu-item">
-                <a href="">
+                <a href="#social-networks">
                     <img src="img/social-networks-icon.png" alt="Social Networks" class="menu-icon">
                 </a>
             </div>
@@ -56,26 +56,45 @@
         </section>
         <section id="me">
             <img src="img/foto-cv.jpg" alt="">
-            <p>Hello, I'm <strong class="p-italic-bold">Agustín</strong>, a <strong
-                    class="p-italic-bold">21-year-old</strong> web
-                developer
-                specialized in static websites. With a year of study and a current focus on <u
-                    class="p-italic-bold">JavaScript</u>, I bring simplicity and efficiency to my projects. Below you can explore my portfolio to see my
-                dedication and growth in this field.
+            <p>Hola, soy <strong class="p-italic-bold">Agustín</strong>, un desarrollador web de <strong
+                    class="p-italic-bold">21 años</strong> especializado en sitios web estáticos. Con un año de estudio y
+                un enfoque actual en <u class="p-italic-bold">JavaScript</u>, aporto simplicidad y eficiencia a mis
+                proyectos. A continuación puede explorar mi portafolio para ver mi dedicación y crecimiento en este
+                campo.
             </p>
-            <button class="download-cv-button"><a href="">Download CV</a></button>
+            <button class="download-cv-button"><a href="">Descargar CV</a></button>
+            <div class="cover-arrow">
+                <a href="#formation" class="arrow"><img src="img/arrow-white.png" alt="" class="arrow"></a>
+            </div>
         </section>
         <section id="formation">
-            <p>Formation:</p>
+            <p>Formación:</p>
             <ul>
-                <li>Secondary education: technical degree specialized in construction (2016 - 2021)</li>
-                <li>University: Degree in marketing (2023 - Present)</li>
+                <li>Educación secundaria: Título técnico especializado en construcción (2016 - 2021)</li>
+                <li>Universidad: Ing. en Software (2024 - Present)</li>
             </ul>
-            <p>Courses:</p>
+            <p>Cursos:</p>
             <ul>
-                <li>Web Developement with HTML and CSS (2023 - 2024)</li>
+                <li>Community manager y publicidad (2022)</li>
+                <li>Desarrollo web con HTML y CSS (2023 - 2024)</li>
                 <li>JavaScript (2024)</li>
             </ul>
+            <div class="cover-arrow">
+                <a href="#projects" class="arrow"><img src="img/arrow-white.png" alt="" class="arrow"></a>
+            </div>
+        </section>
+        <section id="projects">
+            <p>Projects:</p>
+            <div class="item-project">
+                <a href="https://keygoats.netlify.app/" target="_blank"><img src="img/keygoats-page.png"
+                        alt="keygoats-page" class="projects-img"></a>
+                <a href="https://keygoats.netlify.app/" target="_blank">Keygoats Page</a>
+            </div>
+            <div class="cover-arrow">
+                <a href="#social-networks" class="arrow"><img src="img/arrow-white.png" alt="" class="arrow"></a>
+            </div>
+        </section>
+        <section id="social-networks">
         </section>
     </main>
     <footer></footer>
