--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         </nav>
     </header>
     <aside class="social-networks-nav">
-            <a href="https://www.instagram.com/aguscodev" target="_blank"><img src="img/instagram-icon.png" alt=""
-                    class="social-network-icon"></a>
-            <a href="http://www.linkedin.com/in/agust%C3%ADn-e-santillan" target="_blank"><img src="img/linkedin-icon.png" alt=""
-                    class="social-network-icon"></a>
-            <a href="https://github.com/santillanagus" target="_blank"><img src="img/github-icon.png" alt=""
-                    class="social-network-icon"></a>
-            <a href="https://discord.com/users/santillanagus" target="_blank"><img src="img/discord-icon.png" alt=""
-                    class="social-network-icon"></a>
+        <a href="https://www.instagram.com/aguscodev" target="_blank"><img src="img/instagram-icon.png" alt=""
+                class="social-network-icon"></a>
+        <a href="http://www.linkedin.com/in/agust%C3%ADn-e-santillan" target="_blank"><img src="img/linkedin-icon.png"
+                alt="" class="social-network-icon"></a>
+        <a href="https://github.com/santillanagus" target="_blank"><img src="img/github-icon.png" alt=""
+                class="social-network-icon"></a>
+        <a href="https://discord.com/users/santillanagus" target="_blank"><img src="img/discord-icon.png" alt=""
+                class="social-network-icon"></a>
     </aside>
     <main>
         <section id="cover">
@@ -55,26 +55,33 @@
             <div class="capa"></div>
             <div class="cover-div">
                 <p class="cover-tittle">Agustín E. Santillán</p>
-                <p class="tittle-description">Trainee programmer</p>
+                <p class="tittle-description">Software Engineering student & Jr DEV</p>
             </div>
             <div class="cover-arrow">
                 <a href="#me" class="arrow"><img src="img/arrow-white.png" alt="" class="arrow"></a>
             </div>
         </section>
         <section id="me">
-            <img src="img/foto-cv.jpg" alt="">
-            <p>Hola, soy <strong class="p-italic-bold">Agustín</strong>, un desarrollador web de <strong
-                    class="p-italic-bold">21 años</strong> especializado en sitios web estáticos. Con un año de estudio
-                y
-                un enfoque actual en <u class="p-italic-bold">JavaScript</u>, aporto simplicidad y eficiencia a mis
-                proyectos. A continuación podes explorar mi portafolio para ver mi dedicación y crecimiento en este
-                campo.
-            </p>
-            <button class="download-cv-button"><a href="">Descargar CV</a></button>
-            <div class="cover-arrow">
-                <a href="#formation" class="arrow"><img src="img/arrow-white.png" alt="" class="arrow"></a>
-            </div>
-        </section>
+  <img src="img/foto-cv.jpg" alt="">
+  
+  <div class="intro">
+    <p>
+      Hi, I'm Agustín — a 22-year-old web and mobile developer focused on building clean, efficient, and purposeful interfaces. <br>
+      With two years of study and a growing interest in JavaScript and Flutter, I bring simplicity and structure to static websites and mobile prototypes alike. <br>
+      Feel free to explore my portfolio to follow my progress and dedication in both fields.
+    </p>
+    <button class="download-cv-button">
+      <a href="">Download CV</a>
+    </button>
+  </div>
+
+  <div class="cover-arrow">
+    <a href="#formation" class="arrow">
+      <img src="img/arrow-white.png" alt="" class="arrow">
+    </a>
+  </div>
+</section>
+
         <section id="formation">
             <p>Formación:</p>
             <ul>
